--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1172,7 +1172,8 @@
       "add": "Add user",
       "refresh": "Refresh",
       "remove": "Remove",
-      "cancel": "Cancel"
+      "cancel": "Cancel",
+      "delete": "Delete"
     },
     "helpPanel": {
       "title": "Users",
