Add missing period at the end of the sentence

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1082,7 +1082,7 @@
       "description": "Review or edit your cluster configuration and create your cluster.",
       "configuration": {
         "title": "Cluster configuration YAML file",
-        "description": "Review or edit the YAML file that is used to create your cluster",
+        "description": "Review or edit the YAML file that is used to create your cluster.",
         "pending": "<strong>{{clusterName}}</strong> {{action}} is in progress. In <strong>Clusters</strong>, view <strong>{{clusterName}}</strong> {{action}} status.",
         "forceUpdate": "Force update: Edit the cluster while the compute fleet is still running."
       },
