Add EnableCostMonitoringButton to Cluster properties tab

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -110,6 +110,7 @@
       "stackEvents": "Stack events"
     },
     "properties": {
+      "title": "Properties",
       "sshcommand": {
         "label": "SSH command",
         "success": "SSH command copied",
