--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -110,6 +110,7 @@
       "stackEvents": "Stack events"
     },
     "properties": {
+      "title": "Properties",
       "sshcommand": {
         "label": "SSH command",
         "success": "SSH command copied",
@@ -425,6 +426,13 @@
       "actions": {
         "refresh": "Refresh"
       }
+    }
+  },
+  "costMonitoring": {
+    "activateButton": {
+      "label": "Activate cost monitoring",
+      "activationSuccess": "Cost monitoring activation may take up to 24 hours to be enabled. Your request is being processed!",
+      "costExplorerCannotBeAccessed": "In order to use cost monitoring with PCUI, you must enable Cost Explorer for your account by opening Cost Explorer for the first time in the AWS Cost Management console." 
     }
   },
   "wizard": {
