Use i18next to format currency value

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -69,7 +69,8 @@
       "removeTokenButtonAriaLabel": "Remove token {{propertyKey}} {{operator}} {{value}}",
       "enteredTextLabel": "Use: '{{text}}'"
     },
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "intlCurrency": "{{value, currency(USD)}}"
   },
   "errorBoundary": {
     "modal": {
