Introduce useClusterResourcesLimits hooks and change maxQueues and maxComputeResources limits if new_resources_limits feature flag is enabled

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -972,7 +972,10 @@
     },
     "queues": {
       "title": "Queues",
-      "description": "Configure up to {{limit}} cluster queues.",
+      "description": {
+        "default": "Configure up to {{limit}} cluster queues.",
+        "newResourcesLimits": "Configure up to {{limit}} queues, with a total of {{maxCRPerCluster}} compute resources for each cluster."
+      },
       "container": {
         "title": "Queue {{index}} - {{queueName}}"
       },
