[Frontend] Fix label/placeholder used by the Wizard for existing EBS volumes

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -891,7 +891,10 @@
         }
       },
       "Ebs": {
-        "existing": "EBS ID",
+        "existing": {
+          "label": "EBS ID",
+          "placeholder": "i.e., vol-1234"
+        },
         "volumeType": {
           "label": "Volume type",
           "placeholder": "Default ({{defaultVolumeType}})"
