feat: Support ODCR(On-Demand Capacity Reservations) and CB(Capacity Blocks) for PCUI
- Added CapacityReservationTarget select component allowing users to choose between CapacityReservationId, CapacityReservationResourceGroupArn, or none at both queue and compute resource levels.
- Implemented dynamic placeholders to guide users on the required inputs for CapacityReservationId and CapacityReservationResourceGroupArn.
- Introduced CAPACITY_BLOCK as a new purchase type option in the UI.
- Automatically hide the Allocation Strategy selection when CAPACITY_BLOCK is selected as the purchase type, adhering to the expected behavior in ParallelCluster.
- Applied CapacityReservationTarget select component in queue and compute resource levels, maintaining consistency with ParallelCluster's behavior.

--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1094,6 +1094,19 @@
         },
         "rootVolume": {
           "title": "Root volume"
+        },
+        "capacityType":{
+          "label": "CapacityType"
+        },
+        "capacityReservationTarget": {
+          "title": "Capacity reservations",
+          "label": "CapacityReservationTarget"
+        },
+        "capacityReservationResourceGroupArn": {
+          "label": "CapacityReservationResourceGroupArn"
+        },
+        "capacityReservationId": {
+          "label": "CapacityReservationId"
         }
       },
       "addQueueButton": {
