--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -1088,7 +1088,7 @@
           "label": "CapacityReservationTarget",
           "help": {
             "title": "Capacity Reservations and Capacity Blocks",
-            "description": "Learn how to configure Capacity Reservations and Capacity Blocks in ParallelCluster.",
+            "description": "Configure your cluster to use Capacity Reservations or Capacity Blocks for better resource management and availability.",
             "odcrLink": "Launch instances using On-Demand Capacity Reservations (ODCR)",
             "capacityBlocksLink": "Launch instances using Capacity Blocks",
             "note": "When selecting CapacityReservationId, the specified instance type will automatically apply."
