--- a/frontend/locales/en/strings.json
+++ b/frontend/locales/en/strings.json
@@ -527,6 +527,12 @@
         "alreadyExists": "Cluster with name {{clusterName}} already exists. Choose a unique name.",
         "doesntMatchRegex": "Cluster name '{{clusterName}}' doesn't match the the required format. Enter a name that starts with an alphabetical character and has up to 60 characters. If Slurm accounting is configured, the name can have up to 40 characters. Valid characters: A-Z, a-z, 0-9, and - (hyphen)"
       },
+      "version": {
+        "label": "Version",
+        "description": "The ParallelCluster version that will be used for the cluster.",
+        "placeholder": "Enter your cluster version",
+        "cannotBeBlank": "Cluster version must not be blank."
+      },
       "region": {
         "label": "Region",
         "description": "The AWS Region for the cluster.",
